--- a/bar/composer.json
+++ b/bar/composer.json
@@ -65,6 +65,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "5.3.*",
+        "symfony/maker-bundle": "^1.33",
         "symfony/monolog-bundle": "^3.0",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
