--- a/bar/package.json
+++ b/bar/package.json
@@ -4,6 +4,7 @@
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^5.1.1",
         "core-js": "^3.0.0",
+        "file-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.42.1",
         "sass-loader": "^10.2.0",
